addressed feedback items

--- a/outputs/paper/ref.bib
+++ b/outputs/paper/ref.bib
@@ -119,4 +119,80 @@
   publisher={AgRefine},
   year={2021},
   url={https://agrefine.eu/2021/11/02/phd-work-life-balance-a-challenging-path/}
+},
+
+@article{mackie2019contribution,
+  title={Contribution of the doctoral education environment to PhD candidates’ mental health problems: A scoping review},
+  author={Mackie, Sylvia Anne and Bates, Glen William},
+  journal={Higher Education Research \& Development},
+  volume={38},
+  number={3},
+  pages={565--578},
+  year={2019},
+  publisher={Taylor \& Francis}
+},
+
+@article{mcalpine2022phd,
+  title={PhD experience (and progress) is more than work: life-work relations and reducing exhaustion (and cynicism)},
+  author={McAlpine, Lynn and Skakni, Isabelle and Pyh{\"a}lt{\"o}, Kirsi},
+  journal={Studies in Higher Education},
+  volume={47},
+  number={2},
+  pages={352--366},
+  year={2022},
+  publisher={Taylor \& Francis}
+},
+
+@article{hazell2020understanding,
+  title={Understanding the mental health of doctoral researchers: a mixed methods systematic review with meta-analysis and meta-synthesis},
+  author={Hazell, Cassie M and Chapman, Laura and Valeix, Sophie F and Roberts, Paul and Niven, Jeremy E and Berry, Clio},
+  journal={Systematic reviews},
+  volume={9},
+  number={1},
+  pages={1--30},
+  year={2020},
+  publisher={BioMed Central}
+},
+
+@article{charles2022positive,
+  title={Positive factors related to graduate student mental health},
+  author={Charles, Susan T and Karnaze, Melissa M and Leslie, Frances M},
+  journal={Journal of American college health},
+  volume={70},
+  number={6},
+  pages={1858--1866},
+  year={2022},
+  publisher={Taylor \& Francis}
+},
+
+@article{misra2000college,
+  title={College students' academic stress and its relation to their anxiety, time management, and leisure satisfaction},
+  author={Misra, Ranjita and McKean, Michelle},
+  journal={American journal of Health studies},
+  volume={16},
+  number={1},
+  pages={41},
+  year={2000},
+  publisher={Expert Health Data System, Inc.}
+},
+
+@article{forbus2011study,
+  title={A study of non-traditional and traditional students in terms of their time management behaviors, stress factors, and coping strategies},
+  author={Forbus, Patricia and Newbold, John J and Mehta, Sanjay S},
+  journal={Academy of Educational Leadership Journal},
+  volume={15},
+  pages={109},
+  year={2011},
+  publisher={Jordan Whitney Enterprises, Inc}
+},
+
+@article{kearns2007time,
+  title={Is it time well spent? The relationship between time management behaviours, perceived effectiveness and work-related morale and distress in a university context},
+  author={Kearns, Hugh and Gardiner, Maria},
+  journal={High Education Research \& Development},
+  volume={26},
+  number={2},
+  pages={235--247},
+  year={2007},
+  publisher={Taylor \& Francis}
 }
