--- a/outputs/paper/timesheet_analysis.qmd
+++ b/outputs/paper/timesheet_analysis.qmd
@@ -1,7 +1,7 @@
 ---
-title: "Requiem for a Balanced Life: Analysis of My Behavioural Patterns as a PhD Student"
+title: "Requiem for a Balanced Life: Quantitative Autoethnography of My Experience as a First Year PhD Student"
 title-block-banner: true
-abstract: "Many PhD students have trouble with their work-life balance and coping with the stress of their workloads. I undertook a quantitative autoethnography of my own time management skills. I analyzed my own timesheet data to understand my behavioural patterns over the first two semesters of my PhD. I found that I am spending more than 40 hours a week on PhD-related work, with most of my time spent on research, course work, and teach assistant related activities. There is evidence of improper work-life balance based on my tendency to work during the late evening and on weekends. To strive for better balance, I have outlined several suggestions to purposefully plan for each day, as well as created prediction models to estimate and plan for upcoming projects."
+abstract: "Many doctoral students have trouble with their work-life balance and coping with the stress of their workloads. I undertook a quantitative autoethnography of my own time management skills, analyzing my own timesheet data to understand my behavioural patterns over the first two semesters of my PhD. I found that I am spending more than 40 hours a week on PhD-related work, with most of my time spent on research, course work, and teach assistant related activities. There is evidence of improper work-life balance based on my tendency to work during the late evening and on weekends. The findings of this study have the potential to be generalized to early-stage doctoral students, providing insights into their behavioural paterns and time management skills."
 thanks: "Code and data supporting this analysis is available at: https://github.com/christina-wei/PhD-Time-Analysis.git"
 author: Christina Wei
 date: today
@@ -87,15 +87,26 @@ hourly_calc <-
 
 # Introduction
 
-Pursing a PhD degree can be an intellectually fulfilling journey to be at the forefront of academic knowledge. However, this can also be a diﬀicult journey, and many students struggle to cope with the stress of the work. Based on a study conducted on more than 3,500 PhD students in Belgium, @levecque2017work found that 50% of students experienced psychological distress during their PhD, with more than 30% at risk of developing a psychiatric disorder, especially depression. @worklifebalance show that around 70% of students do not perceive themselves having good work-balance balance, with 90% of them reporting an imbalance in their personal life. Reading these cautionary tales makes me question whether my own work-life balance is appropriate.
+Pursing a PhD degree can be an intellectually fulfilling journey to be at the forefront of academic knowledge. However, this can also be a diﬀicult journey, and many students struggle to cope with the stress of the work. Based on a study conducted on more than 3,500 PhD students in Belgium, [@levecque2017work] found that 50% of students experienced psychological distress during their PhD, with more than 30% at risk of developing a psychiatric disorder, especially depression. [@worklifebalance] show that around 70% of students do not perceive themselves having good work-balance balance, with 90% of them reporting an imbalance in their personal life.
 
-While I feel like I have a good handle on my stress level and actively manage my work-life balance, in this paper I quantitatively assess whether I am achieving these goals. I have tracked the time I spent on academic work since I started as a PhD student at the University of Toronto. This enables me to analyze my timesheet data to answer the question of whether I have a good work-life balance in my PhD journey. For this analysis, I am using the amount of tracked time I spent on academic work as the estimand for the proportion of work in my life, while considering the time I do not track as non-work related.
+Research have shown that effective time management skills can buffer against academic stress and help students achieve better work-life balance [@kearns2007time, @misra2000college]. However, there may be differences between the time management practices between traditional and non-traditional students [@forbus2011study]. However, the current research on higher education time management skills are mainly focused on the behaviours of undergraduate students. It is unclear whether the same findings can be applied to students engaged in research-based doctoral studies. This leads to the motivational question for this study: **how can doctoral students leverage time management skills to manage the stress of their academic workload and to balance work-life relations?**
+
+To address this question, I am using the method of quantitative autoethnography to analyze my own timesheet data tracked over the last two semesters, which contains all activities I spent on academic work since starting as a PhD student at the University of Toronto in Fall 2022. For this analysis, I am using the amount of tracked time I spent on academic work as the estimand for the proportion of PhD work in my life, while considering the time I did not track as non-work related. As I am an older student who worked in the industry for a period of time before returning to academia, this findings of this analysis will may be more applicable to non-traditional students than traditional students.
 
 This analysis has provided me with various insights into my behavioural patterns as a PhD student, as well as areas of improvements to strive for better work-life balance. Over the last 8 months, I spent the majority of my time on research, source work, and teaching assistant related activities, working on average about 6 hours a day. I prefer to work in sessions of around 2 hours in length, focusing on 2-3 topics each day. As for work-life balance, there are areas of improvement as I tend to work in late evenings (past 9pm), as well as spend significant amount of time on weekends. To help myself manage my time better, I built prediction models to estimate the number of hours, or the expected completion dates, for projects based on past behavioural patterns.
 
 While the conclusions of this quantitative autoethnography of my own time management skills are specific to me, there is reason to believe they are generalizable. The coursework and teaching assistant expectations on me are common across my cohort, and are similar to expectations at comparable programs at different institutions. As such, I expect this autoethnography will be especially important to students starting a PhD, and also their supervisors.
 
-In the remainder of the paper, I first discuss the characteristics of the timesheet data and the data cleaning procedure applied to it, as well as limitations of this data source in @sec-data. In @sec-results I present trends and findings in behaviour patterns related to individual sessions, daily efforts, as well as trend over time. @sec-model outlines the prediction models used to calibrate and estimate the number of hours available or the completion dates for a given set of project parameters. Lastly, the paper wraps up with @sec-discussion sharing my reflections adjusting from full-time job to a PhD student, getting in the flow of work, concrete suggestions to improve work-life balance, and future work to improve this analysis.
+In the remainder of the paper, I first discuss in @sec-related-work literature related to the stress of doctoral studies and copying strategies. I then outline in @sec-data the characteristics of my timesheet data as well as the limitations of this data source. In @sec-results I present findings of my behaviour patterns related to individual sessions, daily efforts, as well as trends over time. @sec-model outlines the prediction models used to calibrate and estimate the number of hours available or the completion dates for a given set of project parameters. Lastly, the paper wraps up with @sec-discussion sharing my reflections adjusting from full-time job to a PhD student, getting in the flow of work, concrete suggestions to improve work-life balance, and future work to improve this analysis.
+
+# Related Work {#sec-related-work}
+
+There are various **contributing factors to the stress** of pursuing a PhD and learning to become a researcher. Some of these are related to the nature of PhD work, including lack of clarity, intense workloads, supervisory relationship, and isolated experience. First, the path towards earning a doctoral degree is *not clearly defined*, unlike the pursuit of coursework degrees (e.g. undergraduate studies) with concrete learning paths, objectives and outcomes [@mackie2019contribution]. In addition to research skills, students need to learn how to carve their own path to achieve a PhD degree. Secondly, there are *intensive workloads* graduate students take on, juggling between research, learning, teaching, and service work [@levecque2017work]. These academic obligations are constantly in conflict with students' personal life, as they are largely driven by inflexible deadlines (e.g. publication submission deadlines). Also, the amount of workload has been increasing over the years, as students are expected to produce more academic outputs as part of their doctoral studies. *Supervisory relationship* can be another contributing factor to stress [@hazell2020understanding]. For early year PhD students, it make take a period of adjustment before they can collaborate effectively with their supervisors. Mismatch in working style, output expectations, and level of guidance can cause conflicts, leading to additional stress on top of academic work. Lastly, pursuing a PhD can be a lonely and *isolated experience*, as many students feel they are "always alone in the struggle" [@hazell2020understanding]. This is especially affecting out-of-town students who do not have friends and family nearby to provide social support.
+
+There are some mechanisms that research have shown to be effective to **cope and reduce the stress** of pursuing a PhD. Specifically, McAlpine et al. [@mcalpine2022phd] found that students are actively seeking to avoid misalignments between work and life. As such, having a positive balance between work and life can help to buffer exhaustion, resulting in less cynicism and burnout. Also, it is important to cultivate social connections at the individual and the institutional level [@charles2022positive]. As doctoral students often spend hours alone studying and working on independent project, it is easy to feel isolated. Fostering relationships with peers and the institution can combat isolation by providing a sense of social belonging and community.
+
+**Time management** is another mechanism that can be used to effectively manage academic stress. Studies have found that students with more time management behaviors consider themselves to be more effective with their work, and have lower levels of stress [@kearns2007time]. As stress is related to perceived control of time, practicing effective time management techniques can help students to gain control over their time, therefore reducing stress [@misra2000college]. Interestingly, Forbus et al. [@forbus2011study] found that traditional and non-traditional students (those who have not
+followed a continuous educational path into college) differ in their time management behaviours. Non-traditional students are more likely to have more experience at time management, actively applying these skills to effectively organize and prioritize their work. Traditional students on the other hand are less likely to cope with stress with time management, and instead are more likely to use passive stress management methods associated with skipping classes and homework.
 
 # Data {#sec-data}
 
@@ -124,7 +135,7 @@ The following information is tracked for each time entry:
 
 -   `Start date`, `start time`, `end date`, and `end time` of the tracked activity
 
-The raw timesheet data is exported directly from the Toggl Track application. I applied data cleaning routine to include additional information on the type of work, as well as the effort duration in hours for each entry. The `type` of work is defined as:
+The raw timesheet data is exported directly from the Toggl Track application. I applied data cleaning algorithms to include additional information on the type of work, as well as the effort duration in hours for each entry. The `type` of work is defined as:
 
 -   Course Work - time spent on course related activities, like attending classes, working on assignments
 
@@ -172,7 +183,7 @@ There is also an interesting limitation on the *consistency* of project categori
 
 ## Type of Work
 
-From August 15, 2022 to March 13, 2023, I have tracked 1034 hours over 581 sessions. Looking at @fig-time-spent, most of my time are spent on Research (398 hours, 38%) and Course Work (343 hours, 33%) type of work. Performing teaching assistant duties takes about 12% of my time with 124 hours. The remaining 17% of my time are pretty equally split across Learning, Admin, and Other Activities.
+From August 15, 2022 to March 13, 2023, I have tracked 1034 hours over 581 sessions. Looking at @fig-time-spent, most of my time are spent on Research (398 hours, 38%) and Course Work (343 hours, 33%) type of work. Performing teaching assistant (TA) duties takes about 12% of my time with 124 hours. The remaining 17% of my time are pretty equally split across Learning, Admin, and Other Activities.
 
 ```{r}
 #| message: false
@@ -877,9 +888,7 @@ predict_completion_date(
   )
 ```
 
-# Discussion {#sec-discusssion}
-
-The first
+# Discussion {#sec-discussion}
 
 ## Adjustment Going from Industry into Academia
 
@@ -903,7 +912,7 @@ Another aspect for getting into the flow for longer sessions are related to pape
 
 ## Improving Work-Life Balance
 
-While overall I am satisfied with my efforts over the last 8 months as a PhD student and feel like I am progressing well in my studies, this analysis shows me some areas of improvement to be more efficient in my time management as well as achieving better work-life balance.
+While overall I am satisfied with my efforts over the last 8 months as a PhD student and feel like I am progressing well in my studies, this analysis shows me some areas of improvement to be more effective in my time management as well as achieving better work-life balance.
 
 First, I can be more efficient with my time by defining a couple of topics to focus on at the beginning of each day, and engage in work sessions that are no longer than 2 hours in length. This is in line with my behavioural patterns, as I tend to have study sessions around 2 hours length (@tbl-session-summary), and focus on 1 to 3 projects per day (@tbl-day-summary) . The caveat to this is that if I get into the flow of the work, then the work sessions can be longer as not to disturb the deep engagement. Also, time planning should take into account of the scheduled activities of the day (e.g. attending classes) to plan for topics and work sessions around these fixed time slots.
 
@@ -933,7 +942,7 @@ The prediction models can also be improved by building more nuances into their a
 
 # Conclusion {#sec-conclusion}
 
-Pursing a PhD can be an exciting journey filled with self-improvement and new learnings, but it can be a stressful period of time, causing improperly balance between work and life. Having proper time management skills and reflecting on the allocation time can be used to mitigate against the stress and strive for a better work-life balance. By analyzing into my own timesheet data tracking activities since starting my PhD, it has provided me with a number of actionable insights into my own behavioural patterns and areas of improvements to incorporate into my daily practices. I am looking forward to leverage the prediction models to plan for upcoming work, as well as performing this analysis every semester to continuously improve my time management skills.
+Pursing a PhD can be an exciting journey filled with self-improvement and new learnings, but it can be a stressful period of time, causing improper balance between work and life. Having effective time management skills and reflecting on the allocation time can be used to mitigate against the stress and strive for a better work-life balance. By analyzing into my own timesheet data tracking activities since starting my PhD, it has provided me with a number of actionable insights into my own behavioural patterns and areas of improvements to incorporate into my daily practices, as well as using the prediction model to plan for upcoming work. I believe the results of this quantitative autoethnography can be generalized to North American non-traditional students in their early years of doctoral studies, to understand their time allocations and behavioural patterns and to help them cope with their academic workload. The findings in this study can also be used by students to learn time management techniques, as well as by academic institutions to help doctoral students manage their stress.
 
 \newpage
 
